--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -885,8 +885,9 @@
     max-width: calc(100% - 430px);
     padding-right: 15px; }
   .portfolio-page-wrapper .portfolio-staked-graph-block {
+    background-color: #fff;
+    border: solid 1px #fff;
     margin-bottom: 20px;
-    border: solid 1px #3B3B3B;
     border-radius: 9px;
     padding: 30px; }
     @media (max-width: 1679px) {
@@ -897,14 +898,15 @@
       display: flex;
       justify-content: space-between;
       margin-bottom: 20px; }
-    .portfolio-page-wrapper .portfolio-staked-graph-block .title-left p {
-      font-size: 12px;
-      color: #fff;
-      margin-bottom: 5px; }
-    .portfolio-page-wrapper .portfolio-staked-graph-block .title-left h2 {
-      margin-bottom: 0;
-      font-size: 20px;
-      font-weight: 600; }
+    .portfolio-page-wrapper .portfolio-staked-graph-block .title-left {
+      color: #2E4276; }
+      .portfolio-page-wrapper .portfolio-staked-graph-block .title-left p {
+        font-size: 12px;
+        margin-bottom: 5px; }
+      .portfolio-page-wrapper .portfolio-staked-graph-block .title-left h2 {
+        margin-bottom: 0;
+        font-size: 20px;
+        font-weight: 600; }
     .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .g-filter-block .filter-btn-cover .filter-btn {
       font-size: 11px !important;
       padding: 2px 10px 1px !important;
@@ -915,9 +917,9 @@
       align-items: center; }
     .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .bottom-lgd .grph-legend-dropdown .dropdown-toggle {
       border-radius: 6px;
-      border: 1px solid #484848;
+      border: 1px solid #E3E4F3;
       background: #fff;
-      color: #292D32;
+      color: #2E4276;
       font-family: "Poppins";
       font-size: 10px;
       font-style: normal;
@@ -991,22 +993,24 @@
           .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .g-filter-block .filter-btn-cover .filter-btn:hover {
             background-color: #fff; }
           .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .g-filter-block .filter-btn-cover .filter-btn.active {
-            background-color: #2966FF; }
+            background-color: #2966FF;
+            color: #fff; }
   .portfolio-page-wrapper .portfolio-right-col {
     flex: 0 0 auto;
     width: 430px; }
   .portfolio-page-wrapper .my-portfolio-card {
     width: 100%;
-    border: 1px solid #3B3B3B;
+    border: 1px solid #E3E4F3;
     border-radius: 12px;
     padding: 30px 15px 20px;
-    background-color: #000; }
+    background-color: #fff; }
     .portfolio-page-wrapper .my-portfolio-card .my-portfolio-title {
       display: flex;
       align-items: center;
       font-size: 17px;
       font-weight: 700;
-      margin-bottom: 25px; }
+      margin-bottom: 25px;
+      color: #2E4276; }
       .portfolio-page-wrapper .my-portfolio-card .my-portfolio-title img {
         margin-right: 8px; }
     .portfolio-page-wrapper .my-portfolio-card .wallet-bal-block {
@@ -1033,7 +1037,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      border: 1px solid #1C1C1C;
+      border: 1px solid #E3E4F3;
       border-radius: 8px;
       padding: 18px;
       margin-bottom: 15px; }
@@ -1052,7 +1056,7 @@
         font-size: 13px;
         align-items: center;
         margin-bottom: 15px;
-        color: #737373; }
+        color: #2E4276; }
         .portfolio-page-wrapper .my-portfolio-card .pool-block .pool-title span {
           display: inline-block;
           padding-right: 8px;
@@ -1061,11 +1065,11 @@
           content: '';
           flex: 1 1 auto;
           width: 100%;
-          background-color: #1C1C1C;
+          background-color: #E3E4F3;
           height: 1px;
           display: block; }
       .portfolio-page-wrapper .my-portfolio-card .pool-block .est-pool-card-sm {
-        border: 1px solid #1C1C1C;
+        border: 1px solid #E3E4F3;
         border-radius: 8px;
         display: flex;
         justify-content: space-between;
@@ -1074,12 +1078,11 @@
         align-items: center; }
         .portfolio-page-wrapper .my-portfolio-card .pool-block .est-pool-card-sm .label-left {
           font-size: 10px;
-          color: #717171;
-          color: #fff; }
+          color: #2E4276; }
           .portfolio-page-wrapper .my-portfolio-card .pool-block .est-pool-card-sm .label-left .period {
             width: 60px;
             font-size: 13px;
-            color: #fff;
+            color: #8393BA;
             display: inline-block; }
           .portfolio-page-wrapper .my-portfolio-card .pool-block .est-pool-card-sm .label-left .val {
             padding-left: 15px;
@@ -1096,9 +1099,9 @@
         justify-content: space-between; }
         .portfolio-page-wrapper .my-portfolio-card .pool-block .stats-wrapper .stats-col {
           width: calc((100% / 3) - 5px);
-          border: 1px solid #1C1C1C;
-          background: #0D0D0D;
-          color: #fff;
+          border: 1px solid #E3E4F3;
+          background: #F8F8F8;
+          color: #2E4276;
           min-height: 80px;
           padding: 20px 2px 10px 13px;
           border-radius: 8px; }
@@ -1110,7 +1113,7 @@
             font-size: 14px;
             font-weight: 700; }
       .portfolio-page-wrapper .my-portfolio-card .pool-block .pool-card-sm {
-        border: 1px solid #1C1C1C;
+        border: 1px solid #E3E4F3;
         border-radius: 8px;
         display: flex;
         padding: 18px;
@@ -1126,8 +1129,8 @@
           .portfolio-page-wrapper .my-portfolio-card .pool-block .pool-card-sm .pool-data .claim-btn-sm {
             display: inline-flex;
             align-items: center;
-            border: 1px solid #141925;
-            background-color: #141925;
+            border: 1px solid #484D65;
+            background-color: #484D65;
             color: #fff;
             padding: 4px 15px;
             max-height: 27px;
@@ -1149,8 +1152,10 @@
                 font-size: 11px; } }
           .portfolio-page-wrapper .my-portfolio-card .pool-block .pool-card-sm .pool-data p {
             margin-bottom: 5px;
-            font-size: 13px; }
+            font-size: 13px;
+            color: #8393BA; }
           .portfolio-page-wrapper .my-portfolio-card .pool-block .pool-card-sm .pool-data h6 {
+            color: #2E4276;
             margin-bottom: 0;
             font-weight: 700;
             font-size: 15px; }
@@ -1159,12 +1164,12 @@
             .portfolio-page-wrapper .my-portfolio-card .pool-block .pool-card-sm .pool-data h6 .bal {
               display: inline-block;
               padding-left: 12px;
-              color: #525252;
+              color: #8393BA;
               font-size: 12px; }
 
 .maturing-pools-sec {
-  background-color: transparent;
-  border: solid 1px #3B3B3B;
+  background-color: #fff;
+  border: solid 1px #fff;
   border-radius: 9px;
   padding: 10px 25px 25px;
   margin-bottom: 15px; }
