--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -1104,8 +1104,9 @@
     }
     
     .portfolio-staked-graph-block{
+        background-color: #fff;
+        border: solid 1px #fff;
         margin-bottom: 20px;
-        border: solid 1px #3B3B3B;
         border-radius: 9px;
         padding: 30px;
         @media ($sm-1679) {
@@ -1119,9 +1120,9 @@
             margin-bottom: 20px;
         }
         .title-left{
+            color: $text-primary-dark;
             p{
                 font-size: 12px;
-                color: #fff;
                 margin-bottom: 5px;
             }
             h2{
@@ -1145,9 +1146,9 @@
                 .grph-legend-dropdown{
                     .dropdown-toggle{
                         border-radius: 6px;
-                        border: 1px solid #484848;
+                        border: 1px solid #E3E4F3;
                         background: $primary-light;
-                        color: #292D32;
+                        color: $text-primary-dark;
                         font-family: $font-primary;
                         font-size: 10px;
                         font-style: normal;
@@ -1235,6 +1236,7 @@
                         }
                         &.active{
                             background-color: $primary-blue;
+                            color: #fff;
                         }
                     }
                 }
@@ -1247,16 +1249,17 @@
     }
     .my-portfolio-card{
         width: 100%;
-        border: 1px solid #3B3B3B;
+        border: 1px solid #E3E4F3;
         border-radius: 12px;
         padding: 30px 15px 20px;
-        background-color: #000;
+        background-color: #fff;
         .my-portfolio-title{
             display: flex;
             align-items: center;
             font-size: 17px;
             font-weight: 700;
             margin-bottom: 25px;
+            color: $text-primary-dark;
             img{
                 margin-right: 8px;
             }
@@ -1290,7 +1293,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            border: 1px solid #1C1C1C;
+            border: 1px solid #E3E4F3;
             border-radius: 8px;
             padding: 18px;
             margin-bottom: 15px;
@@ -1313,7 +1316,7 @@
                 font-size: 13px;
                 align-items: center;
                 margin-bottom: 15px;
-                color: #737373;
+                color: $text-primary-dark;
                 span{
                     display: inline-block;
                     padding-right: 8px;
@@ -1323,13 +1326,13 @@
                     content: '';
                     flex: 1 1 auto;
                     width: 100%;
-                    background-color: #1C1C1C;
+                    background-color: #E3E4F3;
                     height: 1px;
                     display: block;
                 }
             }
             .est-pool-card-sm{
-                border: 1px solid #1C1C1C;
+                border: 1px solid #E3E4F3;
                 border-radius: 8px;
                 display: flex;
                 justify-content: space-between;
@@ -1338,12 +1341,11 @@
                 align-items: center;
                 .label-left{
                     font-size: 10px;
-                    color: #717171;
-                    color: #fff;
+                    color: $text-primary-dark;
                     .period{
                         width: 60px;
                         font-size: 13px;
-                        color: #fff;
+                        color: $text-primary-light;
                         display: inline-block;
                     }
                     .val{
@@ -1366,9 +1368,9 @@
                 justify-content: space-between;
                 .stats-col{
                     width: calc((100% / 3) - 5px);
-                    border: 1px solid #1C1C1C;
-                    background: #0D0D0D;
-                    color: #fff;
+                    border: 1px solid #E3E4F3;
+                    background: #F8F8F8;
+                    color: $text-primary-dark;
                     min-height: 80px;
                     padding: 20px 2px 10px 13px;
                     border-radius: 8px;
@@ -1384,7 +1386,7 @@
                 }
             }
             .pool-card-sm{
-                border: 1px solid #1C1C1C;
+                border: 1px solid #E3E4F3;
                 border-radius: 8px;
                 display: flex;
                 padding: 18px;
@@ -1401,8 +1403,8 @@
                     .claim-btn-sm{
                         display: inline-flex;
                         align-items: center;
-                        border: 1px solid #141925;
-                        background-color: #141925;
+                        border: 1px solid #484D65;
+                        background-color: #484D65;
                         color: #fff;
                         padding: 4px 15px;
                         max-height: 27px;
@@ -1428,8 +1430,10 @@
                     p{
                         margin-bottom: 5px;
                         font-size: 13px;
+                        color: $text-primary-light;
                     }
                     h6{
+                        color: $text-primary-dark;
                         margin-bottom: 0;
                         font-weight: 700;
                         font-size: 15px;
@@ -1439,7 +1443,7 @@
                         .bal{
                             display: inline-block;
                             padding-left: 12px;
-                            color: #525252;
+                            color: $text-primary-light;
                             font-size: 12px;
                         }
                     }
@@ -1453,8 +1457,8 @@
 
 
 .maturing-pools-sec{
-    background-color: transparent;
-    border: solid 1px #3B3B3B;
+    background-color: #fff;
+    border: solid 1px #fff;
     border-radius: 9px;
     padding: 10px 25px 25px;
     margin-bottom: 15px;
