--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1360,8 +1360,8 @@ $dark-block-2: #2B2C2E;
         color: #fff;
     }
     .portfolio-page-wrapper .portfolio-staked-graph-block .graph-btn-right .bottom-lgd .grph-legend-dropdown .dropdown-toggle{
-        border: 1px solid #151618;
-        background: #151618;
+        border-color: #151618;
+        background-color: #151618;
         color: #fff;
     }
     .portfolio-page-wrapper .my-portfolio-card {
